<resources>
    <string name="app_name">Cell Hunting</string>
    <string name="start_hunting">Start Hunting</string>
    <string name="stop_hunting">Stop Hunting</string>
    <string name="enodeb">eNodeB</string>
    <string name="cid">cellId</string>
    <string name="earfcn">EARFCN</string>
    <string name="pci">PCI</string>
    <string name="rsrp">RSRP</string>
    <string name="rsrq">RSRQ</string>
    <string name="ta">TA</string>
    <string name="rssnr">RSSNR</string>
    <string name="number_of_unique_handovers">Unique handovers</string>
    <string name="inter_frequency_handovers">Inter-frequency handovers</string>
    <string name="inter_enodeb_handovers">Inter-eNodeB handovers</string>
    <string name="intra_frequency_handovers">Intra-frequency handovers</string>
    <string name="max_rsrp">Max RSRP</string>
    <string name="hunting_started">Hunting started</string>
    <string name="lte_connected">Serving LTE cell</string>
    <string name="wifi_connected">Connected to Wifi! Please turn off Wifi…</string>
    <string name="non_lte_connected">Serving cell is not LTE! Move to LTE coverage…</string>
    <string name="start_stop_hint">Tip: Long press to start and stop</string>
    <string name="notification_settings_hint">Tip: Use links above to notification settings per handover type to set different sounds to make them distinguishable</string>
    <string name="eNodeBTooltip">eNodeB Identity (0..1048575)</string>
    <string name="cidTooltip">Cell Identity (0..255)</string>
    <string name="earfcnTooltip">Evolved-UTRA Absolute Radio Frequency Number (0..65535)</string>
    <string name="pciTooltip">Physical Cell Identity (0..503)</string>
    <string name="rsrpTooltip">Reference Signal Received Power (-44..-140 dBm)</string>
    <string name="rsrqTooltip">Reference Signal Received Quality (-3..-19.5 dB)</string>
    <string name="taTooltip">Timing Advance (0..1282)</string>
    <string name="rssnrTooltip">Reference Signal Signal to Noise Ratio</string>
</resources>
